--- a/commercialoperator/components/proposals/templates/commercialoperator/emails/proposals/send_external_submit_notification.html
+++ b/commercialoperator/components/proposals/templates/commercialoperator/emails/proposals/send_external_submit_notification.html
@@ -13,7 +13,7 @@
 	<p>
 		You will receive a notification email if there is any incomplete information or documents missing from the application.
 	</p>
-	<p>If you would like to amend the application noew please contact a licensing office on {{settings.DEP_PHONE}} or email {{settings.SUPPORT_EMAIL}}</p>
+	<p>If you would like to amend the application now please contact a licensing office on {{settings.DEP_PHONE}} or email {{settings.SUPPORT_EMAIL}}</p>
 
     <!-- <p>
     You can access this Application using the following link:
