--- a/commercialoperator/templates/commercialoperator/booking/success_compliance_fee.html
+++ b/commercialoperator/templates/commercialoperator/booking/success_compliance_fee.html
@@ -38,7 +38,7 @@
 
                 {% if request.user.is_authenticated %}
                     <span>
-                    <a href="{% url 'cols-invoice-pdf' fee_invoice.invoice_reference %}" class="btn btn-info btn-lg"  target="_blank">Invoice</a>
+                    <a href="{% url 'cols-invoice-compliance-pdf' fee_invoice.invoice_reference %}" class="btn btn-info btn-lg"  target="_blank">Invoice</a>
                     </span>
                     <span style="float:right;">
                     <a href="{% url 'external' %}" class="btn btn-info btn-lg">Return to Dashboard</a>
