Success message change for Event application.

--- a/commercialoperator/templates/commercialoperator/booking/success_fee.html
+++ b/commercialoperator/templates/commercialoperator/booking/success_fee.html
@@ -24,7 +24,11 @@
                         </tr>
                     </table>
                     <br/>
-                    <label>Please note that it may take up to 21 business days to process your application.<br/><br/>If there is any missing information, the Department may assign this application back to you to complete. In that case you will be notified by email.</label>
+                    {% if proposal and proposal.application_type.name == 'Event' %}
+                        <label>Please note that it may take up to 6 weeks to process your application.<br/><br/>If there is any missing information, the Department may assign this application back to you to complete. In that case you will be notified by email.</label>
+                    {% else %}
+                        <label>Please note that it may take up to 21 business days to process your application.<br/><br/>If there is any missing information, the Department may assign this application back to you to complete. In that case you will be notified by email.</label>
+                    {% endif %}
                   </div>
             {% else %}
                 <div class="col-sm-offset-3 col-sm-6 borderDecoration">
