--- a/commercialoperator/components/proposals/templates/commercialoperator/emails/proposals/send_district_approver_sendback_notification.html
+++ b/commercialoperator/components/proposals/templates/commercialoperator/emails/proposals/send_district_approver_sendback_notification.html
@@ -3,8 +3,8 @@
 {%  block content %}
 	The District Application {{ proposal.lodgement_number }} for district {{  distict_proposal.district_name }} has been sent back by approver.
 
-<!--     <p>Approver comments: {{ approver_comment }}</p>
- -->    
+    <p>Approver comments: {{ approver_comment }}</p>
+    
 
     <p>
     You can access this Application using the following link:
