--- a/commercialoperator/components/proposals/templates/commercialoperator/emails/proposals/send_district_approver_sendback_notification.html
+++ b/commercialoperator/components/proposals/templates/commercialoperator/emails/proposals/send_district_approver_sendback_notification.html
@@ -1,7 +1,7 @@
 {%  extends 'commercialoperator/emails/base_email.html' %}
 
 {%  block content %}
-	The District Application {{ proposal.lodgement_number }} for district {{  distict_proposal.district_name }} has been sent back by approver.
+	<p>The commercial filming lawful authority application {{ proposal.lodgement_number }} for {{  district_proposal.district_name }} district has been sent back by approver.</p>
 
     <p>Approver comments: {{ approver_comment }}</p>
     
