--- a/commercialoperator/components/proposals/templates/commercialoperator/emails/proposals/send_district_proposal_submit_notification.html
+++ b/commercialoperator/components/proposals/templates/commercialoperator/emails/proposals/send_district_proposal_submit_notification.html
@@ -1,7 +1,11 @@
 {%  extends 'commercialoperator/emails/base_email.html' %}
 
 {%  block content %}
-	The Application {{ proposal.lodgement_number }} has been referred for District ( {{ district_proposal.district_name }} ) assessment.
+	<p>The commercial filming lawful authority application {{ proposal.lodgement_number }} for {{ district_proposal.district_name }} district/region has been referred for assessment.</p>
+
+	<p>After assessing the application, click ‘Enter Requirement’ to add conditions then click ‘Propose to Approve’ to send to your District/Regional Manager for approval.</p>
+
+	<p>Please ensure your assessment is completed at least three days prior to the licence proposed start date of {{ proposed_start_date }}.</p>
 
     <p>
     You can access this Application using the following link:
