--- a/commercialoperator/components/proposals/templates/commercialoperator/emails/proposals/send_amendment_notification.html
+++ b/commercialoperator/components/proposals/templates/commercialoperator/emails/proposals/send_amendment_notification.html
@@ -1,11 +1,15 @@
 {%  extends 'commercialoperator/emails/base_email.html' %}
 
 {%  block content %}
-	Your Application {{ proposal.lodgement_number }} for a commercial operations licence has been returned to you for further information.
+    {% if proposal.is_filming_application %}
+	   <p>Your Application {{ proposal.lodgement_number }} for a commercial filming authority has been returned to you for further information.<p>
+    {% else %}
+        <p>Your Application {{ proposal.lodgement_number }} for a commercial operations licence has been returned to you for further information.<p>
+    {% endif %}
 
     {% if reason %}
         <p>
-        	<span>Amendment Reason: {{ reason }}</span>
+            <span>Amendment Reason: {{ reason }}</span>
         </p>
     {% endif %}
 
