--- a/commercialoperator/components/organisations/templates/commercialoperator/emails/organisation_link_notification.html
+++ b/commercialoperator/components/organisations/templates/commercialoperator/emails/organisation_link_notification.html
@@ -15,5 +15,6 @@
     <p>Your request to link your account to a company has been approved. Details are as follows: </p>
     <p><strong>Company : {{ organisation.name }}</strong></p>
     <p><strong>ABN/ ACN: {{ organisation.abn}}</strong></p>
-    <p>Now that your account has been linked you can proceed with an application for a Commercial Operations licence.</p>
+    <!-- <p>Now that your account has been linked you can proceed with an application for a Commercial Operations licence.</p> -->
+    <p>You have been linked to this organisation and you can now make applications on behalf of this organisation.</p>
 {%  endblock %}
