--- a/commercialoperator/components/proposals/templates/commercialoperator/emails/proposals/send_district_approval_notification.html
+++ b/commercialoperator/components/proposals/templates/commercialoperator/emails/proposals/send_district_approval_notification.html
@@ -5,7 +5,7 @@
  
        
         
-        <p>Your lawful authority to conduct commercial filming operations on <em>Conservation and Land Management Act 1984 lands and waters </em> within <strong> {{ district_proposal.district_name }} </strong> district/ region has been approved and expires on {{approval.expiry_date}}. A copy of your lawful authority is attached to this email and can be accessed via Commercial Operator Licensing System (COLS) under your account, click <a href="{{url}}">here</a> here to login.</p>
+        <p>Your lawful authority to conduct commercial filming operations on <em>Conservation and Land Management Act 1984 lands and waters </em> within the <strong> {{ district_proposal.district_name }} </strong> district/region has been approved and expires on {{approval.expiry_date}}. A copy of your lawful authority is attached to this email and can be accessed via Commercial Operator Licensing System (COLS) under your account, click <a href="{{url}}">here</a> here to login.</p>
 
         <p>If your application includes parks and reserves across multiple districts/regions, please note as each district/region provides their approval a new lawful authority will be granted with the additional parks and reserves that supersedes your previous lawful authority.</p>
 
@@ -20,9 +20,9 @@
         <p>Please ensure you have a copy of this handbook on hand either in hardcopy or an electronic version.</p>
 
         <p><strong>Additional Licence Conditions</strong></br>
-        Additional licence conditions are listed in schedule 2 of the lawful authority.If you are required to submit additional documentation based on these conditions, it will show under the “Compliance with requirements” section on your COLS homepage. You will need to login to your account and ensure you have completed any compliance requirements by the due date by uploading the requested documents.</p>
+        Additional licence conditions are listed in schedule 2 of the lawful authority. If you are required to submit additional documentation based on these conditions, it will show under the “Compliance with requirements” section on your COLS homepage. You will need to login to your account and ensure you have completed any compliance requirements by the due date by uploading the requested documents.</p>
 
-        <p>If you have any enquiries or need assistance with the online system please contact a licensing office on {{settings.DEP_PHONE_FILMING}} or email {{settings.SUPPORT_EMAIL_FILMING}}</p>
+        <p>If you have any enquiries or need assistance with the online system please contact a licensing office on {{settings.DEP_PHONE_FILMING}} or email {{settings.SUPPORT_EMAIL_FILMING}}.</p>
    
 
 {%  endblock %}
