--- a/commercialoperator/components/proposals/templates/commercialoperator/emails/proposals/send_filming_approval_notification.html
+++ b/commercialoperator/components/proposals/templates/commercialoperator/emails/proposals/send_filming_approval_notification.html
@@ -2,7 +2,7 @@
 
 {%  block content %}
 
-        <p>Your licence to conduct commercial fiming operations on <em>Conservation and Land Management Act 1984 land and waters</em> has been approved and expires on {{proposal.approval.expiry_date}}. A copy of your licence is attached to this email and can be accessed via the Commercial Operator Licensing System (COLS) under your account, click <a href="{{url}}">here</a> to login.</p>
+        <p>Your licence to conduct commercial fiming operations on <em>Conservation and Land Management Act 1984 lands and waters</em> has been approved and expires on {{proposal.approval.expiry_date}}. A copy of your licence is attached to this email and can be accessed via the Commercial Operator Licensing System (COLS) under your account, click <a href="{{url}}">here</a> to login.</p>
 
         <p><strong>Parks and Activities</strong><br>
         The activities and parks you are permitted to operate within are listed in Schedule 1 of your licence.</p>
@@ -15,9 +15,9 @@
         <p>Please ensure you have a copy of this handbook on hand either in hardcopy or an electronic version.</p>
 
         <p><strong>Additional Licence Conditions</strong></br>
-        Additional licence conditions are listed in schedule 2 of the licence, and are listed under the “Licence Requirements” section in COLS. If you are required to submit additional documents based on these conditions, it will show under the "Compliance with requirements" section on your COLS homepage. You will need to login to your account and ensure you have completed any compliance requirements by the due date by uploading the requested documents.</p>
+        Additional licence conditions are listed in schedule 2 of the licence. If you are required to submit additional documents based on these conditions, it will show under the "Compliance with requirements" section on your COLS homepage. You will need to login to your account and ensure you have completed any compliance requirements by the due date by uploading the requested documents.</p>
 
-        <p>If you have any enquiries or need assistance with the online system please contact a licensing office on {{settings.DEP_PHONE_FILMING}} or email {{settings.SUPPORT_EMAIL_FILMING}}</p>
+        <p>If you have any enquiries or need assistance with the online system please contact a licensing office on {{settings.DEP_PHONE_FILMING}} or email {{settings.SUPPORT_EMAIL_FILMING}}.</p>
    
        <!-- {% if num_requirement_docs == 1 %}
            <p><span>Requirement Documents: Please note, there is {{ num_requirement_docs }} requirement document also attached.</span></p>
