Email template changes.

--- a/commercialoperator/components/proposals/templates/commercialoperator/emails/proposals/send_event_approval_notification.html
+++ b/commercialoperator/components/proposals/templates/commercialoperator/emails/proposals/send_event_approval_notification.html
@@ -8,7 +8,7 @@
         The activities and parks you are permitted to operate within are listed in Schedule 1 of your licence.</p>
 
         <p><strong>Commercial Operator Handbook - Licence Conditions</strong><br>
-        <p>All operators are required to adhere to the licence conditions listed in the Commercial Operator Handbook. Please ensure you have read the conditions on your licence and the Commercial Operator Handbook prior to conduction your events, including section <strong>7.1 Commercial events.</strong></p>
+        <p>All operators are required to adhere to the licence conditions listed in the Commercial Operator Handbook. Please ensure you have read the conditions on your licence and the Commercial Operator Handbook prior to conducting your event, including section <strong>7.1 Commercial events.</strong></p>
         <p> A copy of the handbook can be downloaded from the {{settings.DEP_NAME}} website:</p>
         
         <a href="{{settings.COLS_HANDBOOK_URL}}">{{settings.COLS_HANDBOOK_URL}}</a> 
@@ -16,7 +16,7 @@
         <p>Please ensure you have a copy of this handbook on hand either in hardcopy or an electronic version.</p>
 
         <p><strong>Additional Licence Conditions</strong></br>
-        Additional licence conditions are listed in schedule 2 of the licence, and are listed under the “Licence Requirements” section in COLS. If you are required to submit additional documents based on these conditions, it will show under the "Compliance with requirements" section on your COLS homepage. You will need to login to your account and ensure you have completed any compliance requirements by the due date by uploading the requested documents.</p>
+        Additional licence conditions are listed in schedule 2 of the licence. If you are required to submit additional documents based on these conditions, it will show under the "Compliance with requirements" section on your COLS homepage. You will need to login to your account and ensure you have completed any compliance requirements by the due date by uploading the requested documents.</p>
 
         <p>If you have any enquiries or need assistance with the online system please contact a licensing office on {{settings.DEP_PHONE_FILMING}} or email {{settings.SUPPORT_EMAIL}}</p>
    
