--- a/commercialoperator/components/proposals/templates/commercialoperator/emails/proposals/send_awaiting_payment_approval_notification.html
+++ b/commercialoperator/components/proposals/templates/commercialoperator/emails/proposals/send_awaiting_payment_approval_notification.html
@@ -2,7 +2,7 @@
 
 {%  block content %}
 
-        <p>Your licence to conduct commercial filming operations on <em>Conservation and Land Management Act 1984 land and waters</em> has been approved pending payment. A copy of your invoice is attached to this email and can be accessed in the Commercial Operator Licensing System (COLS) under your account, click <a href="{{url}}">here</a> to login and make payment.</p>
+        <p>Your licence to conduct commercial filming operations on <em>Conservation and Land Management Act 1984 lands and waters</em> has been approved pending payment. A copy of your invoice is attached to this email and can be accessed in the Commercial Operator Licensing System (COLS) under your account, click <a href="{{url}}">here</a> to login and make payment.</p>
         <p>Your licence to conduct your commercial filming operation will not be granted until payment has been made. Please note you cannot conduct your commercial filming operation without grant of the licence.</p>
 
         <!-- <p>Click <a href="{{payment_url}}">here</a> to make payment.</p> -->
