Sort external dashboards descending

--- a/commercialoperator/components/proposals/templates/commercialoperator/emails/proposals/send_approval_notification.html
+++ b/commercialoperator/components/proposals/templates/commercialoperator/emails/proposals/send_approval_notification.html
@@ -10,7 +10,7 @@
         <p>This licence is an important document. Please retain it in a safe location so it can be produced when requested.</p>
 
         <p>Your licence is valid to {{proposal.approval.expiry_date}}</p> -->
-        <p>Your licence to conduct commercial operations on <em>Conservation and Land Management Act 1984</em> has been approved and expires on {{proposal.approval.expiry_date}}. A copy of your licence is attached to this email and can be accessed in the Commercial Operator Licensing System (COLS) under your account, click <a href="{{url}}">here</a> to login.</p>
+        <p>Your licence to conduct commercial operations on <em>Conservation and Land Management Act 1984 lands and waters</em> has been approved and expires on {{proposal.approval.expiry_date}}. A copy of your licence is attached to this email and can be accessed in the Commercial Operator Licensing System (COLS) under your account, click <a href="{{url}}">here</a> to login.</p>
 
         <p><strong>Parks and Activities</strong><br>
         The activities and parks you are permitted to operate within are listed in Schedule 1 of your licence.</p>
@@ -23,7 +23,7 @@
         <p>Please ensure you have a copy of this handbook on hand either in hardcopy or an electronic version.</p>
 
         <p><strong>Additional Licence Conditions</strong></br>
-        Additional licence conditions are listed in schedule 2 of the licence, and are listed under the “Licence Requirements” section in COLS. You will need to login to your account and ensure you have completed all additional licence conditions by the due date by uploading the requested documents.</p>
+        Additional licence conditions are listed in schedule 2 of the licence. If you are required to submit additional documentation based on these conditions, it will show under the “Compliance with requirements” section on your COLS homepage. You will need to login to your account and ensure you have completed any compliance requirements by the due date by uploading the requested documents.</p>
 
         <p>If you have any enquiries or need assistance with the online system please contact a licensing office on {{settings.DEP_PHONE}} or email {{settings.SUPPORT_EMAIL}}</p>
    
