Lawful authority approval email template changes.

--- a/commercialoperator/components/proposals/templates/commercialoperator/emails/proposals/send_district_approval_notification.html
+++ b/commercialoperator/components/proposals/templates/commercialoperator/emails/proposals/send_district_approval_notification.html
@@ -12,15 +12,15 @@
         <p><strong>Parks and Activities</strong><br>
         The activities and parks you are permitted to operate within are listed in Schedule 1 of your lawful authority.</p>
 
-        <p><strong>Commercial Filming and Photography Handbook - Licence Conditions</strong><br>
+        <p><strong>Commercial Filming and Photography Handbook - Conditions</strong><br>
         <p>All operators are required to adhere to the filming authority conditions listed in the Commercial Filming and Photography Handbook. A copy of the handbook can be downloaded from the {{settings.DEP_NAME}} website:</p>
         
         <a href="{{settings.COLS_FILMING_HANDBOOK_URL}}">{{settings.COLS_FILMING_HANDBOOK_URL}}</a> 
         
         <p>Please ensure you have a copy of this handbook on hand either in hardcopy or an electronic version.</p>
 
-        <p><strong>Additional Licence Conditions</strong></br>
-        Additional licence conditions are listed in schedule 2 of the lawful authority. If you are required to submit additional documentation based on these conditions, it will show under the “Compliance with requirements” section on your COLS homepage. You will need to login to your account and ensure you have completed any compliance requirements by the due date by uploading the requested documents.</p>
+        <p><strong>Additional Conditions</strong></br>
+        Additional conditions are listed in schedule 2 of the lawful authority. If you are required to submit additional documentation based on these conditions, it will show under the “Compliance with requirements” section on your COLS homepage. You will need to login to your account and ensure you have completed any compliance requirements by the due date by uploading the requested documents.</p>
 
         <p>If you have any enquiries or need assistance with the online system please contact a licensing office on {{settings.DEP_PHONE_FILMING}} or email {{settings.SUPPORT_EMAIL_FILMING}}.</p>
    
