--- a/commercialoperator/templates/commercialoperator/base.html
+++ b/commercialoperator/templates/commercialoperator/base.html
@@ -14,6 +14,7 @@
 {% system_name_short as system_name_short %}
 {% support_email as support_email %}
 {% is_payment_officer as is_payment_officer %}
+{% build_tag as build_tag %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -23,7 +24,7 @@
             {% bootstrap_css %}
                 <link type="text/css" href="{% static 'commercialoperator/css/base.css' %}" rel="stylesheet">
             {% if not dev %}
-                <link rel="stylesheet" href="{% static 'commercialoperator_vue/static/css/app.css' %}">
+	    <link rel="stylesheet" href="{% static 'commercialoperator_vue/static/css/app.css' %}?v={{build_tag}}">
             {% endif %}
             {% block extra_css %}
             {% endblock %}
@@ -175,9 +176,9 @@
         {% if not dev %}
             <!--<script type="text/javascript" src="https://static.dpaw.wa.gov.au/static/cdnjs/ajax/libs/jquery/2.1.2/jquery.min.js"></script>
             <script type="text/javascript" src="https://static.dpaw.wa.gov.au/static/cdnjs/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
-            <script type="text/javascript" src="{% static 'commercialoperator_vue/static/js/manifest.js' %}"></script>
-            <script type="text/javascript" src="{% static 'commercialoperator_vue/static/js/vendor.js' %}"></script>
-            <script type="text/javascript" src="{% static 'commercialoperator_vue/static/js/app.js' %}"></script>
+	<script type="text/javascript" src="{% static 'commercialoperator_vue/static/js/manifest.js' %}?v={{build_tag}}"></script>
+	<script type="text/javascript" src="{% static 'commercialoperator_vue/static/js/vendor.js' %}?v={{build_tag}}"></script>
+	<script type="text/javascript" src="{% static 'commercialoperator_vue/static/js/app.js' %}?v={{build_tag}}"></script>
         {% else %}
             <script type="text/javascript" src="{{ dev_url }}"></script>
         {% endif %}
