--- a/commercialoperator/templates/commercialoperator/booking/success.html
+++ b/commercialoperator/templates/commercialoperator/booking/success.html
@@ -11,7 +11,7 @@
             </div></div>
         </div>
         <div class="row"><div class="col-sm-12" style="margin-top: 1em">
-            {% if request.user == submitter or request.user.is_staff or request.session.col_booking == booking_id %}
+            {% if request.user == payer or request.user == submitter or request.user.is_staff or request.session.col_booking == booking_id %}
                 {% if monthly_invoicing %}
                   <a href="{% url 'cols-monthly-confirmation-pdf' booking_id %}" class="btn btn-info btn-lg" target="_blank">Confirmation</a>
                 {% else %}
