--- a/commercialoperator/components/proposals/templates/commercialoperator/emails/proposals/send_district_approver_approve_notification.html
+++ b/commercialoperator/components/proposals/templates/commercialoperator/emails/proposals/send_district_approver_approve_notification.html
@@ -3,7 +3,9 @@
 {%  block content %}
 	<p>The commercial filming lawful authority application {{ proposal.lodgement_number }} for the {{ district_proposal.district_name }} district has been assessed and recommended for your approval.</p>
 
-	<p>If the application includes parks and reserves across multiple districts or regions, please note as each district or region provides their approval, an amended lawful authority will be granted to the applicant adding the newly approved parks and reserves which supersedes their previous lawful authority.</p>
+	{% if not district_proposal.is_kensington_proposal %}
+        <p>If the application includes parks and reserves across multiple districts or regions, please note as each district or region provides their approval, an amended lawful authority will be granted to the applicant adding the newly approved parks and reserves which supersedes their previous lawful authority.</p>
+    {% endif %}
 
     <p>Start date: {{ start_date }}</p>
     <p>Expiry date: {{ expiry_date }}</p>
