Event licence approval email changes

--- a/commercialoperator/components/proposals/templates/commercialoperator/emails/proposals/send_event_approval_notification.html
+++ b/commercialoperator/components/proposals/templates/commercialoperator/emails/proposals/send_event_approval_notification.html
@@ -7,6 +7,11 @@
         <p><strong>Parks and Activities</strong><br>
         The activities and parks you are permitted to operate within are listed in Schedule 1 of your licence.</p>
 
+        <p><strong>Licence fees and charges</strong><br>
+        <p>A per participant licence charge is payable in respect to your licence to conduct a commercial event.</p>
+        <p>You will receive email notification when the payment is due and will need to login to your COLS account to complete the compliance requirement at the conclusion of your event, by providing a record of your participants and then making payment.</p>
+        <p>For more information, please see the ‘How to pay the per participant licence charge’ section of the COLS commercial event user guide accessible <a href="{{settings.COLS_EVENT_USERGUIDE_URL}}">here</a>.</p>
+
         <p><strong>Commercial Operator Handbook - Licence Conditions</strong><br>
         <p>All operators are required to adhere to the licence conditions listed in the Commercial Operator Handbook. Please ensure you have read the conditions on your licence and the Commercial Operator Handbook prior to conducting your event, including section <strong>7.1 Commercial events.</strong></p>
         <p> A copy of the handbook can be downloaded from the {{settings.DEP_NAME}} website:</p>
