--- a/commercialoperator/templates/commercialoperator/base.html
+++ b/commercialoperator/templates/commercialoperator/base.html
@@ -38,6 +38,7 @@
 
         </meta>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="shortcut icon" type="image/ico" href="/static/favicon.ico"/>
     </head>
     <body>
         <header class="topmast">
