--- a/commercialoperator/templates/commercialoperator/index.html
+++ b/commercialoperator/templates/commercialoperator/index.html
@@ -31,7 +31,7 @@
                             Access to {{system_name}}
                         </h3>
                         {% bootstrap_messages %}
-			    <a class="btn btn-primary" href="{{ request.get_full_path }}ssologin">Login</a>
+			    <a class="btn btn-primary" href="{{ PUBLIC_URL }}ssologin">Login</a>
                         <hr>
                         <h4>
                             {{system_name}} Password-less Logins
