--- a/commercialoperator/templates/commercialoperator/base.html
+++ b/commercialoperator/templates/commercialoperator/base.html
@@ -1,3 +1,5 @@
+{% comment %} {% extends "webtemplate_dbca/base_b5_auth_session.html" %} {% endcomment %}
+
 {% load bootstrap3 %}
 
 {% load static %}
@@ -113,7 +115,7 @@
                                                 {% endif %}
                                                 <li><a href="{% url 'manage-account' %}">Manage Account</a></li>
 
-                                                {% for org in request.user.commercialoperator_organisations.all %}
+                                                {% comment %} {% for org in request.user.commercialoperator_organisations.all %}
                                                     {% for org_contact in org.contacts.all%}
                                                         {% ifequal org_contact.email request.user.email %}
                                                             {% if org_contact.user_status == 'active' %}
@@ -123,10 +125,10 @@
                                                             {% endif %}
                                                         {% endifequal %}
                                                     {% endfor %}
-                                                {% endfor %}
+                                                {% endfor %} {% endcomment %}
                                                 <li role="separator" class="divider"></li>
 
-                                                <li><a href="{% url 'accounts:logout' %}?next=/">Logout</a></li>
+                                                {% comment %} <li><a href="{% url 'accounts:logout' %}?next=/">Logout</a></li> {% endcomment %}
                                             </ul>
                                         </li>
                                     {% endif %}
