--- a/commercialoperator/templates/commercialoperator/base.html
+++ b/commercialoperator/templates/commercialoperator/base.html
@@ -26,7 +26,7 @@
             {% bootstrap_css %}
                 <link type="text/css" href="{% static 'commercialoperator/css/base.css' %}" rel="stylesheet">
             {% if not dev %}
-	    <link rel="stylesheet" href="{% static 'commercialoperator_vue/static/css/app.css' %}?v={{build_tag}}">
+	    <link rel="stylesheet" href="{% static 'commercialoperator_vue/css/app.css' %}?v={{build_tag}}">
             {% endif %}
             {% block extra_css %}
             {% endblock %}
@@ -173,12 +173,14 @@
         {% if not dev %}
             <!--<script type="text/javascript" src="https://static.dpaw.wa.gov.au/static/cdnjs/ajax/libs/jquery/2.1.2/jquery.min.js"></script>
             <script type="text/javascript" src="https://static.dpaw.wa.gov.au/static/cdnjs/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
-   	    <script type="text/javascript" src="{% static 'commercialoperator_vue/static/js/manifest.js' %}?v={{build_tag}}"></script>
-	    <script type="text/javascript" src="{% static 'commercialoperator_vue/static/js/vendor.js' %}?v={{build_tag}}"></script>
+   	    {% comment %} <script type="text/javascript" src="{% static 'commercialoperator_vue/js/manifest.js' %}?v={{build_tag}}"></script> {% endcomment %}
+	    {% comment %} <script type="text/javascript" src="{% static 'commercialoperator_vue/js/vendor.js' %}?v={{build_tag}}"></script> {% endcomment %}
+        <script type="text/javascript" src="{% static 'commercialoperator_vue/js/chunk-vendors.js' %}?v={{build_tag}}"></script>
             {% if app_build_url %}
-	        <script type="text/javascript" src="http://localhost:9072/app.js?v={{build_tag}}"></script>
+	        {% comment %} <script type="text/javascript" src="http://localhost:9072/app.js?v={{build_tag}}"></script> {% endcomment %}
+            <script type="text/javascript" src="{% static 'commercialoperator_vue/js/app.js' %}?v={{build_tag}}"></script>
             {% else %}
-	        <script type="text/javascript" src="{% static 'commercialoperator_vue/static/js/app.js' %}?v={{build_tag}}"></script>
+	        <script type="text/javascript" src="{% static 'commercialoperator_vue/js/app.js' %}?v={{build_tag}}"></script>
             {% endif %}
         {% else %}
             <script type="text/javascript" src="{{ dev_url }}"></script>
