--- a/commercialoperator/templates/commercialoperator/base.html
+++ b/commercialoperator/templates/commercialoperator/base.html
@@ -1,6 +1,4 @@
-{% comment %} {% extends "webtemplate_dbca/base_b5_auth_session.html" %} {% endcomment %}
-
-{% load bootstrap3 %}
+{% extends "webtemplate_dbca/base_b5_auth_session.html" %}
 
 {% load static %}
 
@@ -18,174 +16,63 @@
 {% is_payment_officer as is_payment_officer %}
 {% build_tag as build_tag %}
 
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-            {% bootstrap_css %}
-                <link type="text/css" href="{% static 'commercialoperator/css/base.css' %}" rel="stylesheet">
-            {% if not dev %}
-	    <link rel="stylesheet" href="{% static 'commercialoperator_vue/css/app.css' %}?v={{build_tag}}">
-            {% endif %}
-            {% block extra_css %}
-            {% endblock %}
-            {% block extra_js %}
-            {% endblock %}
-            <title>
-                {% block title %}
-                {{ short_name }} - {{ department_name }}
-                {% endblock %}
-            </title>
+{% block header_top_menu %}{% endblock %}
 
-        </meta>
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="shortcut icon" type="image/ico" href="/static/favicon.ico"/>
-    </head>
-    <body>
-        <header class="topmast">
-            {% block header %}
-                {% include 'commercialoperator/header.html' %}
-            {% endblock %}
-        </header>
-        {% block menu %}
-            <div class="container-fluid">
-                <div class="row">
-                    <nav class="navbar navbar-default">
-                        <div class="container">
-                            <div class="navbar-header">
-                                <a type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                                    <span class="sr-only">Toggle navigation</span>
-                                    <span class="icon-bar"></span>
-                                    <span class="icon-bar"></span>
-                                    <span class="icon-bar"></span>
-                                </a>
-                                <a class="navbar-brand" href="{% url 'ds_home' %}"><div style="inline"><img src="{% static 'commercialoperator/img/dpaw_small.png' %}">{% if is_internal_login %}Applications {% else %}Home {% endif %}</div></a>
-                            </div>
-                            <div id="navbar" class="navbar-collapse collapse">
-                                <ul class="nav navbar-nav">
-                                    {% block left_menu_items %}
-                                        {% if is_internal_login %}
-                                        <li><a href="/internal/approvals">Licences</a></li>
-                                        <li><a href="/internal/compliances">Compliance with Requirements</a></li>
-                                        <li><a href="/internal/organisations/access">Organisation Access</a></li>
-                                        <li><a href="/internal/search">Search</a></li>
-                                        <li><a href="/internal/payment">Park Entry Fees</a></li>
-                                        {% else %}
-                                        <li><a href="/external/payment">Park Entry Fees</a></li>
-                                        {% endif %}
-                                    {% endblock %}
-                                </ul>
-                                <ul class="nav navbar-nav navbar-right">
-                                    {% if request.user.is_authenticated %}
-                                        <li>
-                                            <a>
-                                            Welcome
-                                            <strong>
-                                                {% if request.user.first_name %}
-                                                    {{ request.user.get_short_name }}
-                                                {% elif request.user.last_name %}
-                                                    {{ request.user.last_name }}
-                                                {% else %}
-                                                    {{ request.user.email }}
-                                                {% endif %}
-                                            </strong>
-                                            </a>
-                                        </li>
-                                        <li class="dropdown">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                                Options
-                                                <span class="caret"></span>
-                                            </a>
-                                            <ul class="dropdown-menu">
-                                                {% if is_commercialoperator_admin_user or request.user.is_superuser %}
-                                                    <li><a href="{% url 'admin:index' %}">Admin</a></li>
-                                                {% endif %}
-                                                {% if is_commercialoperator_admin_user or request.user.is_superuser or is_payment_officer %}
-                                                    <li><a href="/internal/reports">Reports</a></li>
-                                                {% endif %}
-                                                {% if is_commercialoperator_admin_user or request.user.is_superuser %}
-                                                    <li role="separator" class="divider"></li>
-                                                {% endif %}
-                                                {% if request.user.is_superuser %}
-                                                    <li><a href="{% url 'mgt-commands' %}">Management Commands</a></li>
-                                                {% endif %}
-                                                {% if show_tests and request.user.is_superuser %}
-                                                    <li><a href="{% url 'test-emails' %}">Test Emails</a></li>
-                                                {% endif %}
-                                                <li><a href="{% url 'manage-account' %}">Manage Account</a></li>
+{% block extra_css %}
+    <link rel="icon" type="image/png" href="/static/commercialoperator/favicon.ico">
 
-                                                {% comment %} {% for org in request.user.commercialoperator_organisations.all %}
-                                                    {% for org_contact in org.contacts.all%}
-                                                        {% ifequal org_contact.email request.user.email %}
-                                                            {% if org_contact.user_status == 'active' %}
-                                                                {% if org_contact.is_admin or org_contact.check_consultant %}
-                                                                    <li><a href="/external/organisations/manage/{{org.id}}">Manage {{ org.organisation.name}} </a></li>
-                                                                {% endif %}
-                                                            {% endif %}
-                                                        {% endifequal %}
-                                                    {% endfor %}
-                                                {% endfor %} {% endcomment %}
-                                                <li role="separator" class="divider"></li>
+    <link rel="stylesheet" href="{% static 'commercialoperator/css/base.css' %}?v={{build_tag}}">
+    <link rel="stylesheet" href="{% static 'commercialoperator/css/app.css' %}?v={{build_tag}}">
+    <link rel="stylesheet" href="{% static 'commercialoperator/css/chunk-vendors.css' %}?v={{build_tag}}">
+{% endblock %}
 
-                                                {% comment %} <li><a href="{% url 'accounts:logout' %}?next=/">Logout</a></li> {% endcomment %}
-                                            </ul>
-                                        </li>
-                                    {% endif %}
-                                    {% block right_menu_items %}
-                                    {% endblock %}
-                                </ul>
-                            </div>
-                        </div>
-                    </nav>
-                </div>
+{% block custom_js %}
+    <script language="javascript">
+            var env = {
+                "user_is_authenticated": {% if request.user.is_authenticated %}true{% else %}false{% endif %},
+            }
+    </script>
+    <script type="text/javascript" src="{% static 'commercialoperator_vue/js/chunk-vendors.js' %}?v={{build_tag}}"></script>
+    <script type="text/javascript" src="{% static 'commercialoperator_vue/js/app.js' %}?v={{build_tag}}"></script>
+{% endblock %}
 
+{% block menu_items_left_brand %}
+<div class="navbar-nav">
+    <div class="nav-item">
+        <a class="nav-link{% if request.path == '/' %} active{% endif %}" href="{% url 'home'%}"><img src="/static/img/pwl_icon.png">Home</a>
+    </div>
+</div>
+{% endblock %}
+
+{% block menu_items2_right %}
+    {% if request.user.is_authenticated %}
+
+    {% else %}
+    <a href="/ssologin" class="btn btn-primary btn-sm">Login</a>
+    {% endif %}
+{% endblock %}
+
+{% block menu_spacer %}
+    <br>
+{% endblock %}
+
+{% block footer %}
+{% application_version as application_version %}
+{% support_email as support_email %}
+{% dept_support_phone as dept_support_phone %}
+<footer class="footer fixed-bottom mt-3">
+    <div class="container-fluid border-top py-2 bg-light text-secondary">
+        <div class="row">
+            <div class="col">
+                <small class="float-start">Version: {% application_version %}</small>
             </div>
-        {% endblock %}
-        {% block breadcrumbs %}
-        {% endblock %}
-        {% block messages %}
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        {% for message in messages %}
-                            <div class="{{ message|bootstrap_message_classes }} alert-dismissable">
-                                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&#215;</button>
-                                {{ message|safe }}
-                            </div>
-                        {% endfor %}
-                    </div>
-                </div>
+            <div class="col">
+                <small>Support: <a href="mailto:{% support_email %}">{% support_email %}</a> | <a href="tel:{% dept_support_phone %}">{% dept_support_phone %}</a></small>
             </div>
-
-        {% endblock %}
-
-		{% if system_maintenance_due %}
-		    <div class="alert alert-warning">
-		    	<strong>Notice!</strong> System will be down for maintenance between {{ system_maintenance_due }}
-		    </div>
-        {% endif %}
-
-        {% block content %}
-        {% endblock %}
-        {% block modals %}
-        {% endblock %}
-        {% if not dev %}
-            <!--<script type="text/javascript" src="https://static.dpaw.wa.gov.au/static/cdnjs/ajax/libs/jquery/2.1.2/jquery.min.js"></script>
-            <script type="text/javascript" src="https://static.dpaw.wa.gov.au/static/cdnjs/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
-   	    {% comment %} <script type="text/javascript" src="{% static 'commercialoperator_vue/js/manifest.js' %}?v={{build_tag}}"></script> {% endcomment %}
-	    {% comment %} <script type="text/javascript" src="{% static 'commercialoperator_vue/js/vendor.js' %}?v={{build_tag}}"></script> {% endcomment %}
-        <script type="text/javascript" src="{% static 'commercialoperator_vue/js/chunk-vendors.js' %}?v={{build_tag}}"></script>
-            {% if app_build_url %}
-	        {% comment %} <script type="text/javascript" src="http://localhost:9072/app.js?v={{build_tag}}"></script> {% endcomment %}
-            <script type="text/javascript" src="{% static 'commercialoperator_vue/js/app.js' %}?v={{build_tag}}"></script>
-            {% else %}
-	        <script type="text/javascript" src="{% static 'commercialoperator_vue/js/app.js' %}?v={{build_tag}}"></script>
-            {% endif %}
-        {% else %}
-            <script type="text/javascript" src="{{ dev_url }}"></script>
-        {% endif %}
-        {% block custom_js %}
-        {% endblock %}
-    </body>
-</html>
+            <div class="col">
+                <small class="float-end">&copy; {% dept_name %}</small>
+            </div>
+        </div>
+    </div>
+</footer>
+{% endblock footer %}
