Small change to primary_manu to hide park entry fees menu item when logged out

--- a/commercialoperator/templates/webtemplate_dbca/includes/primary_menu.html
+++ b/commercialoperator/templates/webtemplate_dbca/includes/primary_menu.html
@@ -31,9 +31,11 @@
         </a>
     </li>
 {% else %}
-    <li class="nav-item">
-        <a class="nav-link{% if 'species-communities' in request.path %} active{% endif %}" href="/external/payment">
-            Park Entry Fees
-        </a>
-    </li>
+    {% if request.user.is_authenticated %}
+        <li class="nav-item">
+            <a class="nav-link" href="/external/payment">
+                Park Entry Fees
+            </a>
+        </li>
+    {% endif %}
 {% endif %}
