--- a/commercialoperator/templates/webtemplate_dbca/includes/primary_menu.html
+++ b/commercialoperator/templates/webtemplate_dbca/includes/primary_menu.html
@@ -6,6 +6,11 @@
 
 {% if is_internal_login %}
     <li class="nav-item">
+        <a class="nav-link{% if 'proposals' in request.path %} active{% endif %}" href="/internal/">
+            Applications
+        </a>
+    </li>
+    <li class="nav-item">
         <a class="nav-link{% if 'approvals' in request.path %} active{% endif %}" href="/internal/approvals">
             Licences
         </a>
@@ -32,6 +37,11 @@
     </li>
 {% else %}
     {% if request.user.is_authenticated %}
+        <li class="nav-item">
+            <a class="nav-link{% if 'proposals' in request.path %} active{% endif %}" href="/external/">
+                Applications
+            </a>
+        </li>
         <li class="nav-item">
             <a class="nav-link" href="/external/payment">
                 Park Entry Fees
