--- a/commercialoperator/templates/webtemplate_dbca/includes/primary_menu.html
+++ b/commercialoperator/templates/webtemplate_dbca/includes/primary_menu.html
@@ -39,7 +39,7 @@
     {% if request.user.is_authenticated %}
         <li class="nav-item">
             <a class="nav-link{% if 'proposals' in request.path %} active{% endif %}" href="/external/">
-                Applications
+                Proposals
             </a>
         </li>
         <li class="nav-item">
