Added gender neutral greeting

--- a/commercialoperator/components/emails/templates/commercialoperator/emails/base_email.html
+++ b/commercialoperator/components/emails/templates/commercialoperator/emails/base_email.html
@@ -6,7 +6,7 @@
     <body>
         {% block greetings %}
             <p>
-                Dear Sir/Madam,
+                Dear DBCA commercial operator licensing system user,
             </p>
         {% endblock %}
         {% block content %}
