Renamed menu entry for managing linked organisations

--- a/commercialoperator/templates/webtemplate_dbca/includes/menu_bottom.html
+++ b/commercialoperator/templates/webtemplate_dbca/includes/menu_bottom.html
@@ -16,7 +16,7 @@
 {% endif %}
     <li><a class="dropdown-item" href="/ledger-ui/accounts">Manage Account (Ledger)</a></li>
 
-<a class="dropdown-item" href="{% url 'manage-account' %}">Manage Account (COLS)</a>
+<a class="dropdown-item" href="{% url 'manage-account' %}">Manage linked Organisations (COLS)</a>
 
 
 
