Minor change to index.js

--- a/commercialoperator/templates/ledgerui/accounts_base_b5.html
+++ b/commercialoperator/templates/ledgerui/accounts_base_b5.html
@@ -10,13 +10,17 @@
 {% block additional_content %}
 
 <div id="nav-organisations-tab-page" style="display:none;">
-    <div id="app">
-        Linking to an organisation coming soon...
+    <div class="container-fluid">
+        <div id="app">
+            Linking to an organisation coming soon...
+        </div>
     </div>
 </div>
 <div id="nav-settings-tab-page" style="display:none;">
-    <div id="app">
-        Setting up preferences coming soon...
+    <div class="container-fluid">
+        <div id="app">
+            Setting up preferences coming soon...
+        </div>
     </div>
 </div>
 
